force-app/main/default/objects/Product_Restriction__c/Product_Restriction__c.object-meta.xml
<CustomObject>
    <label>Product Restriction</label>
    <nameField>
        <displayFormat>PR{0}</displayFormat>
        <label>A/N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restrictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>