force-app/main/default/objects/Product_Restriction__c/fields/ItemCode1__c.field-meta.xml
<CustomField>
    <fullName>ItemCode1__c</fullName>
    <label>ItemCode1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>