force-app/main/default/objects/Product_Restriction__c/fields/ItemCode2__c.field-meta.xml
<CustomField>
    <fullName>ItemCode2__c</fullName>
    <label>ItemCode2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>