force-app/main/default/objects/Product_Restriction__c/fields/ItemMatch__c.field-meta.xml
<CustomField>
    <fullName>ItemMatch__c</fullName>
    <label>ItemMatch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>At Least One</fullName>
            </value>
            <value>
                <fullName>Exactly 1 Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>