force-app/main/default/objects/Product_Restriction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ItemCode1__c</columns>
    <columns>ItemCode2__c</columns>
    <columns>ItemMatch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>